--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,9 @@
 <app-nav></app-nav>
-<div class="typewriter">
+<div class="billboard">
+  <div class="typewriter">
     <h1>{{ displayedText }}</h1>
   </div>
-  
+  <div class="container" *ngIf="showPortfolioButton">
+    <a href="portfolio" class="button">here</a>
+  </div>
+</div>
