Update project links in portfolio component

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -20,7 +20,7 @@
     <h2>Projects</h2>
     <div class="gallery">
       <div class="gallery-item">
-        <h3>Memetorium - Image Cloud Platform</h3>
+        <h3><a href="https://memetorium.vercel.app">Memetorium - Image Cloud Platform</a></h3>
         <iframe src="https://memetorium.vercel.app" class="project-embed" frameborder="0" allowfullscreen></iframe>
         <ul>
           <li>Image cloud</li>
@@ -29,7 +29,7 @@
       </div>
   
       <div class="gallery-item">
-        <h3>EFC - Eagles FC Website</h3>
+        <h3><a href="https://efcwebsite.vercel.app">EFC - Eagles FC Website</a></h3>
         <iframe src="https://efcwebsite.vercel.app" class="project-embed" frameborder="0" allowfullscreen></iframe>
         <ul>
           <li>Sports team website</li>
@@ -38,7 +38,7 @@
       </div>
   
       <div class="gallery-item">
-        <h3>Blog Made with Angular</h3>
+        <h3><a href="https://blogmadewithangular.vercel.app">Blog Made with Angular</a></h3>
         <iframe src="https://blogmadewithangular.vercel.app" class="project-embed" frameborder="0" allowfullscreen></iframe>
         <ul>
           <li>Blogging platform</li>
