--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -17,7 +17,7 @@
 
 <!-- Vertical Sidebar with Text Links -->
 <div class="social-sidebar">
-  <a href="mailto:emmabassey50@gmail.com" target="_blank" class="social-link">Email</a>
-  <a href="http://www.linkedin.com/in/emmanuel-godwin-bassey-1b33b6265" target="_blank" class="social-link">LinkedIn</a>
-  <a href="https://github.com/Beez1" target="_blank" class="social-link">GitHub</a>
+  <a href="mailto:emmabassey50@gmail.com" target="_blank" class="social-link"><strong>Email</strong></a>
+  <a href="http://www.linkedin.com/in/emmanuel-godwin-bassey-1b33b6265" target="_blank" class="social-link"><strong>LinkedIn</strong></a>
+  <a href="https://github.com/Beez1" target="_blank" class="social-link"><strong>GitHub</strong></a>
 </div>
